# rxnaamapper

./: CITATIONS.bib  README.md  conda.yml  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg
examples/: config.json  sample-config.json  token_75K_min_600_max_750_500K.json  vocabulary_token_75K_min_600_max_750_500K.txt
examples/data-samples/biochemical/: aa-rxn-smiles-01.csv  aa-rxn-smiles-02.csv
examples/data-samples/organic/: rxn-smiles.csv
src/rxn_aa_mapper/: __init__.py  aa_mapper.py  attention.py  baseline_score.py  collator.py  dataset.py  io.py  model.py  pfam.py  rxn_utils.py  tokenization.py  training.py
src/rxn_aa_mapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
