[metadata]
name = rxn_aa_mapper
version = attr: rxn_aa_mapper.__version__
description = RXN AA mapper
long_description = file: README.md
license = MIT
author = IBM RXN team
keywords = RXN AA mapper enzymes biochemistry active sites transformers
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    loguru
    transformers
    pytorch_lightning
    click
    pandas
    numpy
    wandb
    scipy
    xmltodict
    statsmodels
    biopython
setup_requires =
    setuptools
package_dir=
    =src
packages=find_namespace:
scripts=
    bin/create-enzymatic-reaction-vocabulary
    bin/mlm-trainer
    bin/checkpoint-to-hf-model

[options.packages.find]
where=src

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = .git,__pycache__,.mypy_cache,.pytest_cache,.venv, venv

[mypy]
check_untyped_defs = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-loguru.*]
ignore_missing_imports = True

[mypy-rdkit.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-transformers.*]
ignore_missing_imports = True

# to avoid mypy from crashing (https://github.com/python/mypy/issues/11045)
[mypy-transformers.trainer]
check_untyped_defs = False

[mypy-torch.*]
ignore_missing_imports = True

[mypy-xmltodict.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-statsmodels.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-Bio.*]
ignore_missing_imports = True

[mypy-tokenizers.*]
ignore_missing_imports = True
